Fix: users dark mode

--- a/src/components/UserDetails/userDetails.css
+++ b/src/components/UserDetails/userDetails.css
@@ -25,12 +25,10 @@
 
 .user-header h3 {
     font-size: 24px;
-    color: #333;
 }
 
 .role {
     font-size: 16px;
-    color: #555;
 }
 
 .user-info {
@@ -41,11 +39,6 @@
 .user-info p {
     margin: 10px 0;
 }
-
-.user-info strong {
-    color: #333;
-}
-
 .user-info span {
     font-weight: normal; 
 }
